--- a/src/app/protected/cranix/security/firewall/add-rules/add-outgoing-rule.component.html
+++ b/src/app/protected/cranix/security/firewall/add-rules/add-outgoing-rule.component.html
@@ -24,31 +24,57 @@
       <ion-item *ngIf="rule.type == 'room'">
         <ion-label position="stacked">{{'Room'| translate}}</ion-label>
         <ionic-selectable
-         item-content
-         [(ngModel)]="selectedSource"
-         [ngModelOptions]="{standalone: true}"
-         [items]="roomIps"
-         itemValueField="key"
-         itemTextField="name"
-         [canSearch]="true">
-         <ng-template ionicSelectableCloseButtonTemplate>
-          <ion-icon color="red" name="close" style="font-size: 24px;"></ion-icon>
-        </ng-template>
+          #ionicSelectable
+          item-content
+          [(ngModel)]="selectedSource"
+          [ngModelOptions]="{standalone: true}"
+          [items]="roomIps"
+          itemValueField="key"
+          itemTextField="name"
+          [canSearch]="true">
+          <ng-template ionicSelectableHeaderTemplate>
+            <ion-toolbar>
+              <ion-title>
+              {{ "Select a Room" | translate }}
+              </ion-title>
+              <ion-buttons slot="end">
+                <ion-button ion-button (click)="ionicSelectable.close()">
+                  <ion-icon color="danger" name="close"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ng-template>
+          <ng-template ionicSelectableItemIconTemplate>
+            <div></div>
+          </ng-template>
         </ionic-selectable>
       </ion-item>
       <ion-item *ngIf="rule.type == 'device'">
         <ion-label position="stacked">{{'Device'| translate}}</ion-label>
         <ionic-selectable
-         item-content
-         [(ngModel)]="selectedSource"
-         [ngModelOptions]="{standalone: true}"
-         [items]="deviceIps"
-         itemValueField="key"
-         itemTextField="name"
-         [canSearch]="true">
-         <ng-template ionicSelectableCloseButtonTemplate>
-          <ion-icon color="red" name="close" style="font-size: 24px;"></ion-icon>
-        </ng-template>
+          #ionicSelectable
+          item-content
+          [(ngModel)]="selectedSource"
+          [ngModelOptions]="{standalone: true}"
+          [items]="deviceIps"
+          itemValueField="key"
+          itemTextField="name"
+          [canSearch]="true">
+          <ng-template ionicSelectableHeaderTemplate>
+            <ion-toolbar>
+              <ion-title>
+              {{ "Select a Device" | translate }}
+              </ion-title>
+              <ion-buttons slot="end">
+                <ion-button ion-button (click)="ionicSelectable.close()">
+                  <ion-icon color="danger" name="close"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ng-template>
+          <ng-template ionicSelectableItemIconTemplate>
+            <div></div>
+          </ng-template>
         </ionic-selectable>
       </ion-item>
       <ion-item>
