--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -44,8 +44,17 @@
     </ion-fab-list>
   </ion-fab>
   <ion-card>
-    <ion-card-header class="hidden-xs hidden-sm hidden-md">
+    <ion-header>
       <ion-toolbar>
+        <form #addNewDomainForm="ngForm" *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix'">
+          <ion-item>
+            <ion-input [(ngModel)]="newDomain" name="newDomain" placeholder="{{'Enter a new domain name'| translate}}"
+              pattern="[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
+            <ion-button slot="end" (click)="addNewDomain()" [disabled]="!addNewDomainForm.valid">
+              <ion-icon slot="icon-only" name="add"></ion-icon>
+            </ion-button>
+          </ion-item>
+        </form>
         <ion-item *ngIf="segment == 'basic'">
           <ion-input placeholder="{{'search' | translate }}" (input)="onQuickFilterChanged()" id="proxyQuickFilter">
           </ion-input>
@@ -64,7 +73,7 @@
           </ion-button>
         </ion-buttons>
       </ion-toolbar>
-    </ion-card-header>
+    </ion-header>
     <ion-card-content *ngIf="segment == 'basic'">
       <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
         rowHeight="{{authService.settings.rowHeight}}"
@@ -73,15 +82,7 @@
       </ag-grid-angular>
     </ion-card-content>
     <ion-content *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix' || segment == 'positive'">
-      <form #addNewDomainForm="ngForm" *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix'">
-        <ion-item>
-          <ion-input [(ngModel)]="newDomain" name="newDomain" placeholder="{{'Enter a new domain name'| translate}}"
-            pattern="[a-z0-9.-]+\.[a-z]{2,}$"></ion-input>
-          <ion-button slot="end" (click)="addNewDomain()" [disabled]="!addNewDomainForm.valid">
-            <ion-icon slot="icon-only" name="add"></ion-icon>
-          </ion-button>
-        </ion-item>
-      </form>
+
       <ion-list>
         <ion-item *ngFor="let dom of lists[segment]; index as i">{{dom}}
           <ion-button slot="end" (click)="deleteDomain(i)">
