--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -27,22 +27,6 @@
       </ion-segment>
     </ion-col>
   </ion-row>
-  <ion-fab vertical="top" horizontal="end" slot="fixed" class="hidden-lg hidden-xl">
-    <ion-fab-button>
-      <ion-icon name="arrow-forward-circle"></ion-icon>
-    </ion-fab-button>
-    <ion-fab-list side="start">
-      <ion-fab-button *ngIf="segment == 'positive'" (click)="redirectToEdit($event,null)">
-        <ion-icon name="add-circle"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button *ngIf="segment == 'basic'" (click)="writeConfig()">
-        <ion-icon color="success" name="checkmark-sharp"></ion-icon>
-      </ion-fab-button>
-      <ion-fab-button (click)="restartProxy()">
-        <ion-icon name="arrow-redo" color="tertiary"></ion-icon>
-      </ion-fab-button>
-    </ion-fab-list>
-  </ion-fab>
   <ion-card>
     <ion-header>
       <ion-toolbar>
@@ -75,14 +59,18 @@
       </ion-toolbar>
     </ion-header>
     <ion-card-content *ngIf="segment == 'basic'">
-      <ag-grid-angular style="width: 100%; height: 100%;" class="{{authService.settings.agGridThema}}"
+      <ag-grid-angular
+        style="width: 100%; height: 100%;"
+        class="{{authService.settings.agGridThema}}"
         rowHeight="{{authService.settings.rowHeight}}"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" [rowData]="rowData"
-        [columnDefs]="columnDefs" [context]="context" (gridReady)="proxyGridReady($event)" id="proxyGridTable">
+        [rowData]="rowData"
+        [columnDefs]="columnDefs"
+        [context]="context"
+        (gridReady)="proxyGridReady($event)"
+        id="proxyGridTable">
       </ag-grid-angular>
     </ion-card-content>
     <ion-content *ngIf="segment == 'good' || segment == 'bad' || segment == 'cephalix' || segment == 'positive'">
-
       <ion-list>
         <ion-item *ngFor="let dom of lists[segment]; index as i">{{dom}}
           <ion-button slot="end" (click)="deleteDomain(i)">
