Make post and get files available direktly

--- a/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
+++ b/src/app/protected/edu/lessons/tabs/room-control/room-control.component.html
@@ -23,14 +23,22 @@
             size="large">
           </ion-icon>
         </ion-button>
+        <ion-button fill="clear" (click)="onBTNSHARE()"
+          matTooltip="{{'Post file into the Import directory of the logged on users or of the workstation users.'|translate}}">
+          <ion-icon slot="end" name="cloud-upload" size="large"></ion-icon>
+        </ion-button>
+        <ion-button fill="clear" (click)="onBTNCOLLECT()"
+          matTooltip="{{'Collect the file from the Export directory of the logged on users or of the workstation users.'|translate}}">
+          <ion-icon slot="end" name="cloud-download" size="large"></ion-icon>
+        </ion-button>
         <ion-button fill="clear" (click)="openAction($event)"
-          matTooltip="{{'Apply action on all devices in room'|translate}}">
+          matTooltip="{{'Apply an action on all devices in room'|translate}}">
           <ion-icon slot="end" name="desktop" size="large"></ion-icon>
         </ion-button>
       </ion-buttons>
       <ion-buttons slot="end">
         <ion-item matTooltip="{{'Select the room to control' | translate}}">
-          <ion-label *ngIf="room" position="stacked">{{'Select a room' | translate}}</ion-label>
+          <ion-label *ngIf="rooms" position="stacked">{{'Select a room' | translate}}</ion-label>
           <ion-select [(ngModel)]="selectedRoomId" #roomSelect (ionChange)="selectChanged($event)" okText="OK"
             cancelText="{{ 'Cancel' | translate}}">
             <ion-select-option value="{{room.id}}" *ngFor="let room of rooms | async">{{room.name}}</ion-select-option>
@@ -38,7 +46,7 @@
         </ion-item>
         <ion-item matTooltip="{{'Select picture size' | translate}}">
           <ion-label position="stacked">{{'Select picture size' | translate }}</ion-label>
-          <ion-select *ngIf="room" [(ngModel)]="gridSize" #roomSelect (ionChange)="sizeChange($event)"
+          <ion-select *ngIf="rooms" [(ngModel)]="gridSize" #roomSelect (ionChange)="sizeChange($event)"
             okText="{{'apply' | translate }}" cancelText="{{ 'Cancel' | translate}}">
             <ion-select-option value="{{size}}" *ngFor="let size of gridSizes">{{size}}</ion-select-option>
           </ion-select>
