Next iteration to make the menu work on the most browser.

--- a/src/app/protected/protected.page.html
+++ b/src/app/protected/protected.page.html
@@ -1,30 +1,60 @@
-<ion-split-pane contentId="main-content">
-  <ion-menu start=side contentId="main-content" menuId="main" type="overlay">
-    <ion-list-header>
-      <ion-item lines="none">
-        <ion-thumbnail>
-          <img src="assets/images/logo/cranix_school.svg">
-        </ion-thumbnail>
-        <ion-label>
-          <h3 *ngIf="authService.isAllowed('cephalix.manage'); else elseBlock">CEPHALIX</h3>
-          <ng-template #elseBlock>
-            <h3>CRANIX</h3>
-          </ng-template>
-        </ion-label>
-      </ion-item>
-    </ion-list-header>
+<ion-split-pane *ngIf="utilService.okBrowser" contentId="menu1-content">
+  <ion-menu start=side contentId="menu1-content" type=overlay>
     <ion-content>
-      <ion-list id="menu">
-        <ion-menu-toggle [autoHide]="!utilService.okBrowser" *ngFor="let p of appPages">
+      <ion-list id="menu1">
+        <ion-list-header>
+          <ion-item lines="none">
+            <ion-thumbnail>
+              <img src="assets/images/logo/cranix_school.svg">
+            </ion-thumbnail>
+            <ion-label>
+              <h3 *ngIf="authService.isAllowed('cephalix.manage'); else elseBlock">CEPHALIX</h3>
+              <ng-template #elseBlock>
+                <h3>CRANIX</h3>
+              </ng-template>
+            </ion-label>
+          </ion-item>
+        </ion-list-header>
+        <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
           <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false"
             [class.active-menu]="activePath === p.url">
             <ion-icon size="small" color="#ffffff" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'">
             </ion-icon>
-            <ion-label color="#ffffff">{{ p.title | translate }}</ion-label>
+            <ion-label>{{ p.title | translate }}</ion-label>
           </ion-item>
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
   </ion-menu>
-  <ion-router-outlet id="main-content"></ion-router-outlet>
+  <ion-router-outlet id="menu1-content"></ion-router-outlet>
 </ion-split-pane>
+<div *ngIf="! utilService.okBrowser">
+  <ion-menu start=side contentId="menu2-content" type=overlay>
+    <ion-content>
+      <ion-list id="menu1">
+        <ion-list-header>
+          <ion-item lines="none">
+            <ion-thumbnail>
+              <img src="assets/images/logo/cranix_school.svg">
+            </ion-thumbnail>
+            <ion-label>
+              <h3 *ngIf="authService.isAllowed('cephalix.manage'); else elseBlock">CEPHALIX</h3>
+              <ng-template #elseBlock>
+                <h3>CRANIX</h3>
+              </ng-template>
+            </ion-label>
+          </ion-item>
+        </ion-list-header>
+        <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
+          <ion-item routerDirection="root" [routerLink]="[p.url]" lines="none" detail="false"
+            [class.active-menu]="activePath === p.url">
+            <ion-icon size="small" color="#ffffff" slot="start" [ios]="p.icon + '-outline'" [md]="p.icon + '-sharp'">
+            </ion-icon>
+            <ion-label>{{ p.title | translate }}</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+  <ion-router-outlet id="menu2-content"></ion-router-outlet>
+</div>
