--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -1,7 +1,9 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button [autoHide]="utilService.okBrowser" color="#ffffff"></ion-menu-button>
+      <ion-menu-button [autoHide]="utilService.okBrowser" color="#ffffff">
+        <img src="assets/images/logo/cranix_school.svg" width="30" height="30">
+      </ion-menu-button>
     </ion-buttons>  
     <ion-buttons slot="end">
       <ion-button fill="clear" (click)="objectService.initialize(true)" matTooltip="{{ 'Refresh all objects' | translate }}">
