--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -1,8 +1,8 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button [autoHide]="utilService.okBrowser" color="#ffffff">
-        <img src="assets/images/logo/cranix_school.svg" width="30" height="30">
+      <ion-menu-button>
+        <img src="assets/images/logo/cranix_school.svg" width="32" height="32">
       </ion-menu-button>
     </ion-buttons>  
     <ion-buttons slot="end">
