--- a/src/app/protected/toolbar/toolbar.component.html
+++ b/src/app/protected/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button>
+      <ion-menu-button authoHide="utilService.okBrowser">
         <img src="assets/images/logo/cranix_school.svg" width="32" height="32">
       </ion-menu-button>
     </ion-buttons>  
