--- a/src/app/protected/cranix/security/security.page.html
+++ b/src/app/protected/cranix/security/security.page.html
@@ -12,9 +12,14 @@
         <ion-label>{{ 'Firewall' | translate}}</ion-label>
       </ion-tab-button>
 
-      <ion-tab-button tab="proxy">
+      <ion-tab-button *ngIf="authS.isAllowed('system.proxy')" tab="proxy">
         <ion-icon name="proxy"></ion-icon>
         <ion-label>{{ 'Proxy' | translate}}</ion-label>
+      </ion-tab-button>
+
+      <ion-tab-button *ngIf="authS.isAllowed('system.unbound')" tab="unbound">
+        <ion-icon name="globe-outline"></ion-icon>
+        <ion-label>{{ 'DNS-Filter' | translate}}</ion-label>
       </ion-tab-button>
     </ion-tab-bar>
 </ion-tabs>
