--- a/src/app/protected/edu/lessons/lessons.page.html
+++ b/src/app/protected/edu/lessons/lessons.page.html
@@ -4,7 +4,7 @@
       <ion-icon name="calendar"></ion-icon>
       <ion-label>{{ 'Room' | translate }}</ion-label>
     </ion-tab-button>
-    <ion-tab-button tab="mypositive">
+    <ion-tab-button *ngIf="authS.isAllowed('education.proxy')" tab="mypositive">
       <ion-icon name="calendar"></ion-icon>
       <ion-label>{{ 'Security' | translate }}</ion-label>
     </ion-tab-button>
