Implementing software license management. Implementing styling of file input.

--- a/src/app/protected/cranix/softwares/packages/software-packages.component.html
+++ b/src/app/protected/cranix/softwares/packages/software-packages.component.html
@@ -37,11 +37,17 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular style="width: 100%; height: 100%;"class="{{authService.settings.agGridThema}}" [gridOptions]="gridOptions"
-        [rowData]="softwareService.availableSoftwares" [columnDefs]="columnDefs" [context]="context"
+      <ag-grid-angular
+        style="width: 100%; height: 100%;"
+        class="{{authService.settings.agGridThema}}"
+        [gridOptions]="gridOptions"
+        [rowData]="softwareService.availableSoftwares"
+        [columnDefs]="columnDefs"
+        [context]="context"
         rowSelection="multiple"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
-        (gridReady)="onGridReady($event)" (selectionChanged)="onSelectionChanged()" id="agGridTable">
+        (gridReady)="onGridReady($event)"
+        id="agGridTable">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
