Make action fields wither to be able to see delete Implementing writing state files and apply states.

--- a/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
+++ b/src/app/protected/cephalix/institutes/lists/institutes-status.component.html
@@ -40,6 +40,7 @@
         [context]="context"
         [rowData]="rowData"
         [columnDefs]="columnDefs"
+        headerHeight="150"
         [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
         (gridReady)="onGridReady($event)">
       </ag-grid-angular>
