--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -81,17 +81,36 @@
       </ion-toolbar>
     </ion-card-header>
     <ion-card-content>
-      <ag-grid-angular *ngIf="segment == 'list'" #accessGrid style="width: 100%; height: 100%;" id="accessGridTable"
-        class="{{authService.settings.agGridThema}}" [modules]="modules"
-        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick" rowSelection="multiple"
-        [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [autoGroupColumnDef]="autoGroupColumnDef"
-        [animateRows]="true" [rowData]="rowData" [context]="context" [deltaColumnMode]="true" headerHeight="150"
+      <ag-grid-angular *ngIf="segment == 'list'"
+        #accessGrid
+        style="width: 100%; height: 100%;"
+        id="accessGridTable"
+        class="{{authService.settings.agGridThema}}"
+        [modules]="modules"
+        [rowMultiSelectWithClick]="authService.settings.rowMultiSelectWithClick"
+        rowSelection="multiple"
+        [columnDefs]="columnDefs"
+        [defaultColDef]="defaultColDef"
+        [autoGroupColumnDef]="autoGroupColumnDef"
+        [animateRows]="true"
+        [rowData]="rowData"
+        [context]="context"
+        [deltaColumnMode]="true"
+        headerHeight="150"
         (gridReady)="accessGridReady($event)">
       </ag-grid-angular>
-      <ag-grid-angular *ngIf="segment == 'status'" #accessGrid style="width: 100%; height: 100%;" id="accessGridTable"
-        class="{{authService.settings.agGridThema}}" [modules]="modules" [columnDefs]="statusColumnDefs"
-        [defaultColDef]="defaultColDef" [animateRows]="true" [rowData]="securityService.actualStatus"
-        [context]="context" (gridReady)="statusGridReady($event)">
+      <ag-grid-angular *ngIf="segment == 'status'"
+        #statusGrid
+        style="width: 100%; height: 100%;"
+        id="statusGridTable"
+        class="{{authService.settings.agGridThema}}"
+        [modules]="modules"
+        [columnDefs]="statusColumnDefs"
+        [defaultColDef]="defaultColDef"
+        [animateRows]="true"
+        [rowData]="securityService.actualStatus"
+        [context]="context"
+        (gridReady)="statusGridReady($event)">
       </ag-grid-angular>
     </ion-card-content>
   </ion-card>
