--- a/src/app/protected/cranix/devices/add-device/add-device.component.html
+++ b/src/app/protected/cranix/devices/add-device/add-device.component.html
@@ -18,11 +18,35 @@
       <ion-list lines="full">
         <ion-item *ngIf="roomsToSelect && device">
           <ion-label position="stacked">{{'roomId'| translate}}</ion-label>
-          <ion-select type="text" formControlName="roomId" (ionChange)="roomChanged($event)"
+          <ionic-selectable
+          #ionicSelectable
+          (onChange)="roomChanged($event)"
+          item-content
+          [items]="roomsToSelect"
+          itemValueField="id"
+          itemTextField="name"
+          [canSearch]="true">
+          <ng-template ionicSelectableHeaderTemplate>
+            <ion-toolbar>
+              <ion-title>
+              {{ "Select a Room" | translate }}
+              </ion-title>
+              <ion-buttons slot="end">
+                <ion-button ion-button (click)="ionicSelectable.close()">
+                  <ion-icon color="danger" name="close"></ion-icon>
+                </ion-button>
+              </ion-buttons>
+            </ion-toolbar>
+          </ng-template>
+          <ng-template ionicSelectableItemIconTemplate>
+            <div></div>
+          </ng-template>
+        </ionic-selectable>
+          <!-- ion-select type="text" formControlName="roomId" (ionChange)="roomChanged($event)"
             [compareWith]="objectService.compareFn">
             <ion-select-option *ngFor="let room of roomsToSelect | async" value="{{room.id}}">{{room.name}}
             </ion-select-option>
-          </ion-select>
+          </ion-select -->
         </ion-item>
         <ion-item *ngIf="!addHocRooms && device && ipAdresses">
           <ion-label position="stacked">{{'ip'| translate}}</ion-label>
