Make imports more readable. Only Administrator can add and modify printers. Make header uniform

--- a/src/app/protected/cephalix/institutes/details/status/institute-status.component.html
+++ b/src/app/protected/cephalix/institutes/details/status/institute-status.component.html
@@ -1,6 +1,6 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-row class="header-row">
-  <ion-col size=12>
+  <ion-col>
      <ion-title>{{'Status of the institute:' | translate}} {{ object.name }}</ion-title>
   </ion-col>
 </ion-row>
