--- a/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
+++ b/src/app/protected/cephalix/institutes/details/synced-objects/institute-synced-objects.component.html
@@ -1,6 +1,6 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-row class="header-row">
-  <ion-col size=12>
+  <ion-col>
     <ion-title>{{ 'List of synchronized objects in the selected institute:' | translate}} {{institute.name}}
     </ion-title>
   </ion-col>
