--- a/src/app/protected/cranix/hwconfs/details/edit/hwconf-edit.page.html
+++ b/src/app/protected/cranix/hwconfs/details/edit/hwconf-edit.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 <ion-row class="header-row">
-  <ion-col size=12>
+  <ion-col>
     <ion-title color="primary">{{ 'Modify selected hwconf' | translate}}: "{{object.name}}"
       {{object.deviceType | translate }} {{object.description}}
     </ion-title>
