--- a/src/app/protected/cranix/softwares/status/software-status.component.html
+++ b/src/app/protected/cranix/softwares/status/software-status.component.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content id="carded">
   <ion-row class="header-row">
-    <ion-col size=12>
+    <ion-col>
       <ion-title>{{ 'Software installation status:' | translate}} {{grouping | translate}}</ion-title>
     </ion-col>
   </ion-row>
