--- a/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
+++ b/src/app/protected/cephalix/institutes/details/edit/institute-edit.component.html
@@ -4,10 +4,9 @@
   </ion-toolbar>
 </ion-header>
 <ion-row class="header-row">
-  <ion-col size=6>
+  <ion-col>
     <ion-title>{{ 'Modify selected institute:' | translate}} "{{object.name}}"</ion-title>
   </ion-col>
-  <ion-col size=3></ion-col>
 </ion-row>
 <ion-content>
   <ion-card>
