--- a/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
+++ b/src/app/protected/cranix/hwconfs/details/members/hwconf-members.page.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content id="carded">
 <ion-row class="header-row">
-  <ion-col size=12>
+  <ion-col>
     <ion-title>{{ 'Members of the selected hwconf:' | translate}} "{{hwconf.name}}" {{hwconf.description}}
       {{hwconf.deviceType | translate}}
     </ion-title>
