--- a/src/app/protected/cranix/security/firewall/firewall.component.html
+++ b/src/app/protected/cranix/security/firewall/firewall.component.html
@@ -1,12 +1,12 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content id="carded">
   <ion-row class="header-row">
-    <ion-col size=6>
+    <ion-col>
       <ion-title>{{ 'Manage firewall configuration' | translate}}</ion-title>
     </ion-col>
   </ion-row>
   <ion-row>
-    <ion-col size="12">
+    <ion-col>
       <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="in">
         <ion-segment-button value="in" layout="icon-start">
           <ion-label class="hidden-xs hidden-sm">{{'Incoming rules' | translate}}</ion-label>
