--- a/src/app/protected/cranix/security/proxy/proxy.component.html
+++ b/src/app/protected/cranix/security/proxy/proxy.component.html
@@ -1,12 +1,12 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content id="carded">
   <ion-row class="header-row">
-    <ion-col size=6>
+    <ion-col>
       <ion-title>{{ 'Manage proxy configuration' | translate}}</ion-title>
     </ion-col>
   </ion-row>
   <ion-row>
-    <ion-col size="12">
+    <ion-col>
       <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="basic">
         <ion-segment-button value="basic">
           <ion-label>{{'Basic configuration' | translate}}</ion-label>
