--- a/src/app/protected/cranix/security/room-access/room-access.component.html
+++ b/src/app/protected/cranix/security/room-access/room-access.component.html
@@ -1,12 +1,12 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content id=carded>
   <ion-row class="header-row">
-    <ion-col size=12>
+    <ion-col>
       <ion-title>{{ 'Manage access in the rooms' | translate}}</ion-title>
     </ion-col>
   </ion-row>
   <ion-row>
-    <ion-col size="12">
+    <ion-col>
       <ion-segment (ionChange)="segmentChanged($event)" color="secondary" value="list">
         <ion-segment-button value="list">
           <ion-label>{{'Room access rules' | translate}}</ion-label>
