--- a/src/app/protected/cranix/system/acls/system-acls.component.html
+++ b/src/app/protected/cranix/system/acls/system-acls.component.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content id="carded">
   <ion-row class="header-row">
-    <ion-col size=12>
+    <ion-col>
       <ion-title>{{ 'Manage system acls for groups and users' | translate}}
       </ion-title>
     </ion-col>
