--- a/src/app/protected/cranix/system/addons/system-addons.component.html
+++ b/src/app/protected/cranix/system/addons/system-addons.component.html
@@ -1,7 +1,7 @@
 <cranix-toolbar></cranix-toolbar>
 <ion-content id="carded">
     <ion-row class="header-row">
-        <ion-col size=6>
+        <ion-col>
             <ion-title>{{'System addons' | translate}}</ion-title>
         </ion-col>
     </ion-row>
